--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,8 @@ body {
     padding: 0;
 }
 
-h3 {
+
+#content-area h3 {
     border-bottom: 1px solid #EEE;
     font-family: Arvo, serif;
     font-size: 1.6rem;
@@ -127,7 +128,8 @@ h3 {
     margin: 2rem 0 1rem;
 }
 
-h4 small {
+
+#content-area h4 small {
     font-size: .7rem;
 }
 
