--- a/css/style.css
+++ b/css/style.css
@@ -51,35 +51,44 @@ body {
 }
 
 #social-icons a {
-    color: #CCC;
-    font-size: 2rem;
+    background-color: #CCC;
+    border-radius: 4px;
+    color: #FFF;
     display: inline-block;
-    margin: 0 5px;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    margin: 0 2px;
+    padding: 5px;
+    text-align: center;
+    width: 1.5rem;
+}
+
+#social-icons a {
 }
 
 #social-icons a:hover {
-    color: #333;
+    background-color: #333;
     text-decoration: none;
 }
 
 #social-icons .google-plus:hover {
-    color: #DD4B39;
+    background-color: #DD4B39;
 }
 
 #social-icons .twitter:hover {
-    color: #00ACEE;
+    background-color: #00ACEE;
 }
 
 #social-icons .github:hover {
-    color: #333;
+    background-color: #333;
 }
 
 #social-icons .rss:hover {
-    color: #F90;
+    background-color: #F90;
 }
 
 #social-icons .email:hover {
-    color: #333;
+    background-color: #333;
 }
 
 
