--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
     font-weight: 200;
     line-height: 1.6rem;
     margin: 40px 0;
@@ -31,10 +30,10 @@ body {
 #site-title h2 {
     font-size: 1.5rem;
     font-weight: 800;
+    line-height: 1.6rem;
     margin: 10px 0;
     text-align: center;
 }
-
 
 
 /* ---------------------------------------------------------------------------------------------- */
@@ -117,12 +116,23 @@ body {
 /* -----| CONTENT AREA |------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------- */
 
-#content-area {
+
+.intro-wrapper {
+    background-color: #EFEFEF;
+    border-radius: 6px;
+    font-size: 1rem;
+    padding: 20px;
     text-align: justify;
 }
 
+.intro-wrapper hr {
+    border-top: 1px solid #DEDEDE;
+    border-bottom: 1px solid #F3F3F3;
+    margin: 20px 0;
+}
+
 .contact-info-table {
-    font-size: 85%;
+    font-size: .9rem;
     width: 100%;
 }
 
@@ -137,6 +147,10 @@ body {
     font-size: 1.6rem;
     font-weight: normal;
     margin: 2rem 0 1rem;
+}
+
+#content-area h4 {
+    font-size: 1rem;
 }
 
 
@@ -187,46 +201,37 @@ body {
 
 @media (min-width:1200px) {
 
-    #site-title h2 {
-        font-size: 1.7rem;
-    }
-
-    #social-icons a {
-        font-size: 1.75rem;
-        line-height: 1.75rem;
-        width: 1.75rem;
-        padding: 6px 7px;
+    html {
+        font-size: 110%;
     }
 
 }
 
 @media (min-width: 980px) and (max-width: 1199px) {
 
-    #site-title h2 {
-        font-size: 1.5rem;
-        line-height: 1.6rem;
-    }
+    /* NULL */
 
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
 
+    html {
+        font-size: 90%;
+    }
+
     #site-title h2 {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         line-height: 1.2rem;
     }
 
-    #social-icons {
-        margin: .4rem 0;
+    #social-icons a {
+        font-size: 1.2rem;
+        line-height: 1rem;
+        margin: 0 2px;
+        padding: 5px;
+        width: 1.2rem;
     }
 
-    #social-icons a {
-        font-size: 1rem;
-        line-height: 1rem;
-        margin: 0 1px;
-        width: 1rem;
-        padding: 4px;
-    }
 
 }
 
@@ -254,8 +259,9 @@ body {
     }
 
     #site-title h2 {
-        text-align: center;
+        line-height: 2.5rem;
         margin: 0 0 0 50px;
+        text-align: center;
     }
 
     #social-icons {
@@ -266,7 +272,7 @@ body {
     #social-icons a {
         font-size: 1.2rem;
         margin: 0 1px;
-        padding: 5px 6px;
+        padding: 5px;
         width: 1.2rem;
         line-height: 1.2rem;
     }
