--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 
 #site-title {
     color: #333;
+    text-align: center;
 }
 
 #site-title:hover {
@@ -31,7 +32,13 @@ body {
     font-size: 1.5rem;
     font-weight: 800;
     line-height: 1.6rem;
-    margin: 10px 0;
+    margin: 10px 0 0;
+}
+
+#blurb {
+    color: #999;
+    font-size: .9rem;
+    font-weight: 300;
     text-align: center;
 }
 
@@ -41,7 +48,7 @@ body {
 /* ---------------------------------------------------------------------------------------------- */
 
 #social-icons {
-    margin: 10px 0;
+    margin: 1.25rem 0;
     text-align: center;
 }
 
@@ -53,7 +60,7 @@ body {
     font-size: 1.5rem;
     line-height: 1.5rem;
     margin: 0 2px;
-    padding: 5px;
+    padding: 5px 6px;
     text-align: center;
     width: 1.5rem;
 }
@@ -192,7 +199,7 @@ body {
 @media (min-width:1200px) {
 
     html {
-        font-size: 110%;
+        font-size: 120%;
     }
 
 }
@@ -206,22 +213,8 @@ body {
 @media (min-width: 768px) and (max-width: 979px) {
 
     html {
-        font-size: 90%;
+        font-size: 80%;
     }
-
-    #site-title h2 {
-        font-size: 1.2rem;
-        line-height: 1.2rem;
-    }
-
-    #social-icons a {
-        font-size: 1.2rem;
-        line-height: 1rem;
-        margin: 0 2px;
-        padding: 5px;
-        width: 1.2rem;
-    }
-
 
 }
 
@@ -254,17 +247,13 @@ body {
         text-align: center;
     }
 
-    #social-icons {
-        float: right;
-        margin: .3rem 0 0;
+    #blurb {
+        display: none;
     }
 
-    #social-icons a {
-        font-size: 1.2rem;
-        margin: 0 1px;
-        padding: 5px;
-        width: 1.2rem;
-        line-height: 1.2rem;
+    #social-icons {
+        float: right;
+        margin: .2rem 0 0;
     }
 
 }
