--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     font-size: 1.5rem;
     font-weight: 800;
     line-height: 1.6rem;
-    margin: 10px 0 0;
+    margin: 10px 0;
 }
 
 #blurb {
