Updated Bootstrap to v3.0-RC2 and tweaked site styles/layouts where needed

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,17 @@
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| GENERAL |------------------------------------------------------------------------------ */
-/* ---------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -----| GENERAL |---------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 body {
     font-family: 'Oxygen', sans-serif;
-    font-size: 100%;
     font-weight: 300;
-    line-height: 1.6rem;
     margin: 40px 0;
 }
 
 
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| SIDE BAR |----------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -----| SIDE BAR |--------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 #site-title {
     color: #333;
@@ -25,10 +23,9 @@ body {
 }
 
 #site-title h2 {
-    font-size: 1.5rem;
-    font-weight: 800;
-    line-height: 1.6rem;
-    margin: 10px 0;
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin: 2rem 0;
     white-space: nowrap;
 }
 
@@ -44,9 +41,9 @@ body {
 }
 
 
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| SOCIAL ICONS |------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -----| SOCIAL ICONS |----------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 #social-icons {
     margin: 1rem 0;
@@ -58,20 +55,23 @@ body {
     border-radius: 4px;
     color: #FFF;
     display: inline-block;
-    font-size: 1.5rem;
-    line-height: 1.5rem;
     margin: 0 2px;
-    padding: 5px 6px;
+    padding: 5px;
     text-align: center;
-    width: 1.5rem;
-}
-
-#social-icons a {
 }
 
 #social-icons a:hover {
     background-color: #333;
     text-decoration: none;
+}
+
+#social-icons i {
+    display: inline-block;
+    font-size: 2rem;
+    height: 2.2rem;
+    line-height: 2.2rem;
+    vertical-align: middle;
+    width: 2.2rem;
 }
 
 #social-icons .google-plus:hover {
@@ -95,9 +95,9 @@ body {
 }
 
 
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| NAVIGATION |--------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -----| NAVIGATION |------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 #site-navigation {
     margin: 1rem 0;
@@ -120,14 +120,13 @@ body {
 }
 
 
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| CONTENT AREA |------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -----| CONTENT AREA |----------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 .contact-info-table {
     background-color: #EFEFEF;
     border-radius: 6px;
-    font-size: 1rem;
     width: 100%;
 }
 
@@ -139,39 +138,25 @@ body {
     background-color: #EFEFEF;
     border-radius: 6px;
     display: none;
-    font-size: 1rem;
     padding: 20px;
     text-align: center;
 }
 
 .lead {
-    font-size: 1.1rem;
-    line-height: 1.75rem;
-    margin-top: 20px;
+    font-size: 1.75rem;
+    margin: 2rem 0;
     text-align: justify;
 }
 
-.inner-padding {
-    padding: 0 1rem;
-}
-
 #content-area h3 {
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid #E3E3E3;
     font-family: Arvo, serif;
-    font-size: 1.6rem;
     font-weight: normal;
-    margin: 2rem 0 1rem;
+    padding-bottom: 5px;
+    margin: 4rem 0 1rem;
 }
 
-#content-area h4 small {
-    font-size: .8rem;
-}
-
-#content-area ul li {
-    line-height: 1.5rem;
-}
-
-.inline li {
+.list-inline li {
     background-color: #EFEFEF;
     border-radius: 4px;
     margin: 5px;
@@ -179,9 +164,9 @@ body {
 }
 
 
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| FOOTER |------------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -----| FOOTER |----------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 #site-footer {
     border-top: 1px solid #EEE;
@@ -200,16 +185,14 @@ body {
 }
 
 
-/* ---------------------------------------------------------------------------------------------- */
-/* -----| RESPONSIVE |--------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------- */
-
-
+/* -------------------------------------------------------------------------- */
+/* -----| RESPONSIVE |------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 @media (min-width:1200px) {
 
     html {
-        font-size: 120%;
+        font-size: 100%;
     }
 
 }
@@ -231,7 +214,7 @@ body {
 @media (max-width: 767px) {
 
     body {
-        margin: 20px 0;
+        margin: 0;
     }
 
     #side-bar {
@@ -252,23 +235,23 @@ body {
     }
 
     #site-title h2 {
-        line-height: 2.5rem;
+        line-height: 4rem;
         margin: 0 0 0 50px;
         text-align: center;
     }
 
-    #blurb {
-        display: none;
-    }
-
     #social-icons {
         float: right;
-        margin: .2rem 0 0;
+        margin: .4rem 0 0;
     }
 
 }
 
 @media (max-width: 520px) {
+
+    body {
+        margin: 0;
+    }
 
     #site-title {
         display: block;
@@ -283,7 +266,7 @@ body {
     }
 
     #site-title h2 {
-        margin: 0;
+        margin: .5rem 0 0;
     }
 
     #social-icons {
